checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000206296.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#49: 
> >    git://git.kernel.org/pub/scm/linux/kernel/git/tip/linux-2.6-tip.git sched-fixes-for-linus

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#72: 
>   /home/torvalds/v2.6/linux/arch/x86/include/asm/tsc.h:46: error: ‘cycles’ undeclared (first use in this function)

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#73: 
>   /home/torvalds/v2.6/linux/arch/x86/include/asm/tsc.h:46: error: (Each undeclared identifier is reported only once

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#74: 
>   /home/torvalds/v2.6/linux/arch/x86/include/asm/tsc.h:46: error: for each function it appears in.)

WARNING:TYPO_SPELLING: 'didnt' may be misspelled - perhaps 'didn't'?
#89: 
didnt actually need any fixing (and in fact it broke the build).
^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'doesnt' may be misspelled - perhaps 'doesn't'?
#91: 
So upstream is fine and doesnt need any fix.
                        ^^^^^^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000206296.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 6 warnings, 0 checks, 28 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000206296.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
